force-app/main/default/objects/refedge__Program_Health__c/fields/refedge__Enable_Rescheduling__c.field-meta.xml
<CustomField>
    <fullName>refedge__Enable_Rescheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Rescheduling</label>
    <type>Checkbox</type>
</CustomField>