force-app/main/default/objects/refedge__Program_Health__c/fields/refedge__Frequency__c.field-meta.xml
<CustomField>
    <fullName>refedge__Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>