force-app/main/default/objects/refedge__Program_Health__c/fields/refedge__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>refedge__Object_Type__c</fullName>
    <inlineHelpText>Specify which Reference Program elements this goal is for: Accounts, Contacts, or Content.</inlineHelpText>
    <label>Object Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>